--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.header {
+  padding: 10px;
+  height: 8vh;
+  background: var(--yellow);
+  border-bottom: 3px solid var(--black);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header h1 {
+  font-family: "Fredoka One", cursive;
+  font-size: 1.4em;
+}
+.home {
+  color: var(--black);
+  width: 100%;
+  min-height: 80vh;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: var(--white);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  align-items: stretch;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 768px) {
+  .header {
+    padding: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .home {
+    align-items: center;
   }
 }
